Move examples